force-app/main/default/objects/SD_Company_KPI__c.object
<CustomObject>
    <fields>
        <fullName>April_NRZ__c</fullName>
        <label>April (NRZ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April_RZ__c</fullName>
        <label>April (RZ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April__c</fullName>
        <label>April</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August_NRZ__c</fullName>
        <label>August (NRZ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August_RZ__c</fullName>
        <label>August (RZ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August__c</fullName>
        <label>August</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December_NRZ__c</fullName>
        <label>December (NRZ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December_RZ__c</fullName>
        <label>December (RZ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December__c</fullName>
        <label>December</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>February_NRZ__c</fullName>
        <label>February (NRZ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>February_RZ__c</fullName>
        <label>February (RZ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>February__c</fullName>
        <label>February</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>January_NRZ__c</fullName>
        <label>January (NRZ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>January_RZ__c</fullName>
        <label>January (RZ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>January__c</fullName>
        <label>January</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_NRZ__c</fullName>
        <label>July (NRZ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_RZ__c</fullName>
        <label>July (RZ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July__c</fullName>
        <label>July</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_NRZ__c</fullName>
        <label>June (NRZ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_RZ__c</fullName>
        <label>June (RZ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June__c</fullName>
        <label>June</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March_NRZ__c</fullName>
        <label>March (NRZ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March_RZ__c</fullName>
        <label>March (RZ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March__c</fullName>
        <label>March</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_NRZ__c</fullName>
        <label>May (NRZ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_RZ__c</fullName>
        <label>May (RZ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May__c</fullName>
        <label>May</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>November_NRZ__c</fullName>
        <label>November (NRZ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>November_RZ__c</fullName>
        <label>November (RZ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>November__c</fullName>
        <label>November</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October_NRZ__c</fullName>
        <label>October (NRZ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October_RZ__c</fullName>
        <label>October (RZ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October__c</fullName>
        <label>October</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>= (equal to)</fullName>
                </value>
                <value>
                    <fullName>&lt; (less than)</fullName>
                </value>
                <value>
                    <fullName>&gt; (more than)</fullName>
                </value>
                <value>
                    <fullName>≥ (greater than equal to)</fullName>
                </value>
                <value>
                    <fullName>≤ (less than equal to)</fullName>
                </value>
                <value>
                    <fullName>≠ (not eqaul to)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q1__c</fullName>
        <label>Q1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2__c</fullName>
        <label>Q2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3__c</fullName>
        <label>Q3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SD_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>SD_Company__c</referenceTo>
        <relationshipLabel>Company KPI</relationshipLabel>
        <relationshipName>Company_KPI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SD_KPI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KPI</label>
        <referenceTo>SD_KPI__c</referenceTo>
        <relationshipLabel>Company KPI</relationshipLabel>
        <relationshipName>Company_KPI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>September_NRZ__c</fullName>
        <label>September (NRZ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>September_RZ__c</fullName>
        <label>September (RZ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>September__c</fullName>
        <label>September</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Value__c</fullName>
        <label>Target Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Per_Year__c</fullName>
        <label>Total Per Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Year</valueSetName>
        </valueSet>
    </fields>
    <label>Company KPI</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Company KPI</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>